feat: New alternating menu colors to make package names written in `` that appear white easier to see

--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
-$bar-color1: #eee;
-$bar-color2: #f8f8f8;
+$bar-color1: #D8D8D8;
+$bar-color2: #E8E8E8;
 
 /*-- scss:rules --*/
 
